Домашняя работа 5: Реализация работы с БД H2
Запустил локальную БД H2. Описал структуру сущностей City, CityWeather, WeatherType в скриптах Liquibase (schema.sql).

Реализовал CRUD-операции в соответствующих репозиториях для каждой модели, используя JDBC и Hibernate.

Обновил openapi.yml
