# SpringBootApp/src/main/java/ru/khodov/springbootapp/controllers/CityController.java
@@ -1,0 +1,47 @@
+package ru.khodov.springbootapp.controllers;
+
+
+import org.springframework.beans.factory.annotation.Qualifier;
+import org.springframework.web.bind.annotation.*;
+import ru.khodov.springbootapp.model.City;
+import ru.khodov.springbootapp.service.CityService;
+
+
+import java.util.List;
+
+@RestController
+@RequestMapping("/city")
+public class CityController {
+
+    private final CityService cityService;
+
+    public CityController(@Qualifier("jdbcCityService") CityService cityService) {
+        this.cityService = cityService;
+    }
+
+
+    @GetMapping
+    public List<City> getAllCities() {
+        return cityService.getAllCities();
+    }
+
+    @GetMapping("/{id}")
+    public City getCityById(@PathVariable Long id) {
+        return cityService.getCityById(id);
+    }
+
+    @PostMapping
+    public City createCity(@RequestBody City city) {
+        return cityService.createCity(city);
+    }
+
+    @PutMapping("/{id}")
+    public City updateCity(@PathVariable Long id, @RequestBody City updatedCity) {
+        return cityService.updateCity(id, updatedCity);
+    }
+
+    @DeleteMapping("/{id}")
+    public void deleteCity(@PathVariable Long id) {
+        cityService.deleteCity(id);
+    }
+}
